@@ -57,3 +57,6 @@ languageToLocale[da-dk] = da-dk
 ; example someSolution.locale-text.en-us.ini.
 localeTextPaths[] = vendor/simplecomplex/locale/locale-text-ini
 ;localeTextPaths[] = solutions
+; Throw exception on request for non-existent text.
+; Production settings should probably set this to false.
+localeTextErrNotFound = true
